8136854: G1 ConcurrentG1RefineThread::stop delays JVM shutdown for >150ms

Decrease the default wait delay for mark thread initialization to accomodate very short running applications.

Reviewed-by: tbenson, mgerdin